# trapdoor-ll

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LINK.txt  README.md  README_zh.md  TODOs.md  Template.sln  changelog.md  create_release_note.py  metadata  prepareLib.cmd  run_bds.cmd  run_bds.ps1  sponsors.md
.github/ISSUE_TEMPLATE/: -english--bug-report.md  bug--.md  bug-zh.md  bug_en.md  bug_report.md  bug_report_en.yml  bug_report_zh.yml  config.yml  feature_request_en.yml  feature_request_zh.yml
.github/workflows/: build-template.yml  cmake-build.yml  github-actions-demo.yml  updateSDK.yml
Template/: Plugin.cpp  Resource.aps  Resource.rc  Template.aps  Template.vcxproj  Template.vcxproj.filters  Version.h  dllmain.cpp  pch.h  resource.h
docs/: build.md  func.md  simplayerscrpit.md  功能和权限的分配.md
package/: changelog.md
scripts/: create_release_note.py
src/: Plugin.cpp  TrapdoorMod.cpp  Version.h  banner.txt  config.h.in  dllmain.cpp  pch.h
src/base/: Config.cpp  Configuration.cpp  Msg.cpp  Particle.cpp  Settings.cpp  TrAPI.cpp  TrapdoorAPI.cpp  TrapdoorMod.cpp  UserConfig.cpp  Utils.cpp  config.json  hhhxiao.json  lang.json  trapdoor.cpp  trigger.md
src/commands/: CalCommand.cpp  CommandHelper.cpp  CounterCommand.cpp  DataCommand.cpp  DistanceCommand.cpp  DrawCommand.cpp  HsaCommand.cpp  HudCommand.cpp  LogCommand.cpp  OSCommand.cpp  PlayerCommand.cpp  ProfCommand.cpp  RandCommand.cpp  SeedCommand.cpp  SelfCommand.cpp  ShortcutCommand.cpp  SlimeChunkCommand.cpp  SpawnCommand.cpp  TestCommand.cpp  TickCommand.cpp  TrCommand.cpp  TrFunctionCommand.cpp  TrapdoorCommand.cpp  TriggerCommand.cpp  TweakCommand.cpp  VillageCommand.cpp
src/data/: BlockPos.cpp  DataConverter.cpp  TAABB.cpp  TActor.cpp  TBlockPos.cpp  TVec3.cpp  Vec3.cpp  sponsors.md
src/events/: ItemUseOnEvent.cpp  PlayerAttackEvent.cpp
src/functions/: AutomaticTool.cpp  BlockRotateHelper.cpp  ClientLevel.cpp  DistanceHelper.cpp  EventTrigger.cpp  Events.cpp  HUDHelper.cpp  HopperCounter.cpp  HsaHelper.cpp  InfoDisplay.cpp  InfoDisplayer.cpp  InventoryTool.cpp  MCTick.cpp  MicroTicking.cpp  OSInfoHelper.cpp  RandomTweaker.cpp  RedstoneTool.cpp  ScriptDriver.cpp  Shortcuts.cpp  SimPlayerManager.cpp  SimpleProfiler.cpp  SimulateAPIWrapper.cpp  SlimeChunkHelper.cpp  SpawnAnalyzer.cpp  SpawnHelper.cpp  SysInfoHelper.cpp  Tweakers.cpp  VIllageHelper.cpp  VillageHelper.cpp  VillageHelper.h
src/include/: AbsFunction.h  AutomaticTool.h  BlockPos.h  BlockRotateHelper.h  ClientLevel.h  CommandHelper.h  Config.h  Configuration.h  DataConverter.h  DistanceHelper.h  EventTrigger.h  Events.h  HUDHelper.h  HopperCounter.h  HsaHelper.h  InfoDisplay.h  InfoDisplayer.h  InventoryTool.h  MCTick.cpp  MCTick.h  MicroTicking.h  Msg.h  OSInfoHelper.h  Particle.h  ProfileInfo.h  RandomTweaker.h  RedstoneTool.h  ScriptDriver.h  Settings.h  Shortcuts.h  SimPlayerHelper.h  SimpleProfiler.h  SimulateAPIWrapper.h  SlimeChunkHelper.h  SpawnAnalyzer.h  SpawnHelper.h  SysInfoHelper.h  TAABB.h  TActor.h  TBlockPos.h  (+14 more)
src/include/3rd/: forward.hpp
src/root/: config.json  lang.json
src/root/scripts/: hello_world.lua
src/tick/: MCTick.cpp  ProfileInfo.cpp  SimpleProfiler.cpp  game_tick.cpp
